k3s/paperclip/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperclip
  namespace: paperclip
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperclip.lab.2slow.ca`)
      kind: Rule
      services:
        - name: paperclip
          port: 80
  tls: {}
